# disaster-response-dashboard

./: .coverage  .dockerignore  .gitignore  3D_MAP_INTEGRATION_SUMMARY.md  3D_TERRAIN_ERRORS_FIXED.md  AGENTS.md  AWS_DEPLOYMENT_SETUP.md  AWS_DEPLOYMENT_SUMMARY.md  BRUTE_FORCE_FIXES_AND_WORKFLOW_INTEGRATION.md  BRUTE_FORCE_TESTING_SUMMARY.md  BUSINESS_VALUE.md  CI-CD-INTEGRATION-SUMMARY.md  CLEAN_MAP_STATE.md  COMMAND_PATTERN_TEST_ORCHESTRATION.md  COMPONENT_INTERACTION_DIAGRAM.md  COMPONENT_INTERACTION_MAP.md  CONFIGURATION_GUIDE.md  DEPLOYMENT_SUCCESS_REPORT.md  DEVELOPMENT_STATUS.md  DOCKER_README.md  DOCKER_SUCCESS_SUMMARY.md  Dockerfile  Dockerfile.codebuild  Dockerfile.production  Dockerfile.simple  ENHANCED_TESTING_IMPLEMENTATION_SUMMARY.md  ENVIRONMENT_SETUP_GUIDE.md  ERROR_CORRELATION_SYSTEM.md  FAIL_FAST_SYSTEM_SUMMARY.md  FINAL_SUMMARY.md  FOUNDRY_3D_INTEGRATION_SUMMARY.md  FOUNDRY_DATA_FUSION_VERIFICATION.md  FOUNDRY_PAGES_STATUS_REPORT.md  FRONTEND_DEVELOPMENT_PLAN.md  FRONTEND_LAYER_VALIDATION_INTEGRATION.md  GITHUB_SECRETS_SETUP.md  JOHNNY_IVE_DESIGN_SUMMARY.md  MAPBOX_3D_BUILDINGS_RESTORED.md  MAPBOX_SPRING_2025_INTEGRATION.md  MAP_CENTRIC_DESIGN.md  (+76 more)
.cursor/: cli.json  settings.json
.github/: PULL_REQUEST_TEMPLATE.md
backend/: .env.production.final  .env.production.final.save  API_ARCHITECTURE_DIAGRAM.md  API_ARCHITECTURE_OUTLINE.md  API_ENDPOINTS_DIAGRAM.md  Dockerfile  Dockerfile.test  FRONTEND_USER_JOURNEY_DIAGRAM.md  TECHNICAL_INSERTS_DEMO_GUIDE.md  USER_JOURNEY_DIAGRAM.md  config.env  config.env.example  config.env.production  config.py  fix_ontology_types.py  foundry_functions.py  input_validation.py  mock_aip.py  mock_ontology.py  mock_palantir.py  mock_transforms.py  mypy.ini  pytest.ini  rate_limiting.py  requirements-apprunner.txt  requirements-test.txt  requirements.txt  run_synthetic_api.py  security_headers.py  simple_api.py  test_api.py
config/: README.md
data/: california_counties.geojson  mock_hazards.geojson  mock_routes.geojson
debug-reports/: headless-browser-debug-report.json  headless-console-logs.txt  interactive-map-validation-report.json  playwright-debug-report.json  visual-rendering-validation-report.json
deployment/: README.md  deploy.sh  docker-compose.full.yml  nginx.conf  prometheus.yml
docker/: Dockerfile
docs/: 3D_HOLOGRAPHIC_WAYPOINTS_IMPLEMENTATION_PLAN.md  3D_ROUTING_INTEGRATION_GUIDE.md  3D_TERRAIN_GUIDE.md  AIP_DECISION_SUPPORT_GUIDE.md  API_DOCUMENTATION.md  AWS_DEPLOYMENT_GUIDE.md  (+34 more)
(+1470 files in other folders)
